package edu.fiuba.algo3.modelo.Seccion;

import edu.fiuba.algo3.modelo.Carta.Especial.Clima.Clima;

public class Asedio extends Seccion {


    /*@Override
    public void recibirClima(Clima clima){
        clima.afectarAsedio();
    }*/
}
