package edu.fiuba.algo3.modelo.Seccion;

import edu.fiuba.algo3.modelo.Carta.Especial.Clima.Clima;

public class Rango extends Seccion {




    public void recibirClima(Clima clima){}
}
